<resources>

    <string name="app_name">VTM Samples</string>
    <string name="theme_default">Default</string>
    <string name="theme_osmarender">Osmarender</string>
    <string name="theme_osmagray">Osmagray</string>
    <string name="theme_tubes">Tubes</string>
    <string name="theme_newtron">NewTron</string>
    <string name="theme_external">External theme (Android 5)</string>
    <string name="theme_external_archive">External theme archive</string>
    <string name="styler_mode_line">Line</string>
    <string name="styler_mode_area">Area</string>
    <string name="styler_mode_outline">Outline</string>
    <string name="styler_controls_toggle">Controls</string>
    <string name="style_1">Show nature</string>
    <string name="style_2">Hide nature</string>
    <string name="menu_gridlayer">Grid</string>
    <string name="dialog_reverse_geocoding_title">Reverse Geocoding</string>
    <string name="dialog_theme_title">Select a theme</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="file_invalid">The selected file is invalid.</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="search_key">\'*\' or OSM key</string>
    <string name="search_value">void or value</string>
    <string name="now">Now</string>
    <string name="warning">Warning</string>
    <string name="startup_message_mbtiles">To run this sample activity, you need an MBTiles database installed on storage.\n\nadb push %s %s</string>
    <string name="exit">Exit</string>
    <string name="replace_fragment">Replace fragment</string>
    <string name="empty_fragment_text">This is a fragment to test the back stack behaviour of the map fragment.</string>

</resources>
