<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/themes" android:checkableBehavior="single" android:menuCategory="container">
        <item android:id="@+id/theme_default" android:checkable="true" android:title="@string/theme_default" android:checked="true" android:showAsAction="never"></item>
        <item android:id="@+id/theme_tubes" android:checkable="true" android:title="@string/theme_tubes" android:showAsAction="never"></item>
        <item android:id="@+id/theme_osmarender" android:checkable="true" android:title="@string/theme_osmarender" android:showAsAction="never"></item>
        <item android:id="@+id/theme_newtron" android:checkable="true" android:title="@string/theme_newtron" android:showAsAction="never"></item>
        </group>
</menu>
