<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.oscim.android.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></org.oscim.android.MapView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggleControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|end|right"
            android:onClick="onToggleControls"
            android:text="@string/styler_controls_toggle" />

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ccdddddd"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:visibility="gone">

            <SeekBar
                android:id="@+id/seekBarS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:max="100" />

            <SeekBar
                android:id="@+id/seekBarV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:max="100"
                android:paddingTop="10dp" />

            <SeekBar
                android:id="@+id/seekBarH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingTop="10dp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/checkBoxLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/styler_mode_line" />

                <RadioButton
                    android:id="@+id/checkBoxArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/styler_mode_area" />

                <RadioButton
                    android:id="@+id/checkBoxOutline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/styler_mode_outline" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>